use jpl instead of jul