@@ -30,19 +30,25 @@
         <configuration>
           <trimStackTrace>false</trimStackTrace>
           <argLine>
-            -Djava.util.logging.manager=org.apache.logging.log4j.jul.LogManager
+            -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
             --add-opens java.base/java.net=ALL-UNNAMED
             --add-opens java.base/java.io=ALL-UNNAMED
             --add-opens java.base/java.lang=ALL-UNNAMED
             --add-opens java.base/java.lang.ref=ALL-UNNAMED
             --add-opens java.base/jdk.internal.ref=ALL-UNNAMED
-            --add-opens java.logging/java.util.logging=ALL-UNNAMED
             --add-opens java.base/java.util.concurrent.locks=ALL-UNNAMED
           </argLine>
         </configuration>
       </plugin>
     </plugins>
   </build>
+
+  <repositories>
+    <repository>
+      <id>jitpack.io</id>
+      <url>https://jitpack.io</url>
+    </repository>
+  </repositories>
 
   <dependencyManagement>
     <dependencies>
@@ -85,12 +91,6 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-api</artifactId>
-      <version>2.20.0</version>
-    </dependency>
-
-    <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter-api</artifactId>
       <scope>test</scope>
@@ -121,15 +121,9 @@
     </dependency>
 
     <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-core</artifactId>
-      <version>2.20.0</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.logging.log4j</groupId>
-      <artifactId>log4j-jul</artifactId>
-      <version>2.17.1</version>
+      <groupId>com.github.umjammer</groupId>
+      <artifactId>vavi-commons</artifactId>
+      <version>1.1.14</version>
       <scope>test</scope>
     </dependency>
   </dependencies>
